objects/EUR_ISP_Settlement__c.object
<CustomObject>
    <description>In use for iSpend</description>
    <fields>
        <fullName>EUR_ISP_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>Settlements (EU)</relationshipLabel>
        <relationshipName>Settlements_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Amount_Excluding_Tax__c</fullName>
        <label>Amount Excluding Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Amount_Including_Tax__c</fullName>
        <label>Amount Including Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Awaiting Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_ISP_Calculation_Engine_Country__c</fullName>
        <formula>IF(RecordType.DeveloperName = &apos;EUR_ISP_DE_Settlement&apos;, &apos;DE&apos;, &apos;ISP&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculation Engine Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Foreign_Amount_Excluding_Tax__c</fullName>
        <label>Foreign Amount Excluding Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Foreign_Amount_Including_Tax__c</fullName>
        <label>Foreign Amount Including Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Internal_Doc_Number__c</fullName>
        <label>Doc Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_ISP_Invoice_Number_Invoice_Date__c</fullName>
        <inlineHelpText>You are not allowed to create a Settlement with the same invoice number and date as already exist.</inlineHelpText>
        <label>Invoice Number + Invoice Date</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_ISP_Matched__c</fullName>
        <label>Matched</label>
        <summarizedField>EUR_ISP_Settlement_Line__c.EUR_ISP_Amount__c</summarizedField>
        <summaryForeignKey>EUR_ISP_Settlement_Line__c.EUR_ISP_Settlement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Settlement_Status__c</fullName>
        <label>Settlement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Dispute</fullName>
                </value>
                <value>
                    <fullName>Re-assign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_ISP_Spot_Rate__c</fullName>
        <label>Spot Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Tax_Effective_Date__c</fullName>
        <label>Tax Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Vendor_Invoice_Date__c</fullName>
        <label>Vendor Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Vendor_Invoice_Number__c</fullName>
        <label>Vendor Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>EUR_ISP_Vendor__c</referenceTo>
        <relationshipLabel>Settlements (EU)</relationshipLabel>
        <relationshipName>Settlements_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Settlement (EU)</label>
    <nameField>
        <displayFormat>SE-{00000000}</displayFormat>
        <label>Settlement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Settlements (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_ISP_DE_Settlement</fullName>
        <active>true</active>
        <label>DE Settlement</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ISP_iSpend_Settlement</fullName>
        <active>true</active>
        <label>iSpend Settlement</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>EUR_ISP_Account_Or_Vendor</fullName>
        <active>true</active>
        <description>Account or Vendor has to be entered.</description>
        <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;EUR_ISP_iSpend_Settlement&apos;,
ISBLANK(EUR_ISP_Account__c),
ISBLANK(EUR_ISP_Vendor__c)
)</errorConditionFormula>
        <errorMessage>Please enter an Account OR a Vendor!</errorMessage>
    </validationRules>
</CustomObject>